--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,5 +1,14 @@
 {
-  "mapviewer.containers.HomePage.ready.maps": "Show ready maps",
+  "mapviewer.containers.MapPage.info": "Map Data:",
+  "mapviewer.containers.MapPage.flags": "Output:",
+  "mapviewer.containers.MapPage.checkbox.streets": "streets",
+  "mapviewer.containers.MapPage.checkbox.houses": "houses",
+  "mapviewer.containers.MapPage.checkbox.water": "water objects",
+  "mapviewer.containers.MapPage.up": "up",
+  "mapviewer.containers.MapPage.down": "down",
+  "mapviewer.containers.MapPage.left": "left",
+  "mapviewer.containers.MapPage.right": "right",
+  "mapviewer.containers.HomePage.ready.maps": "Show Ready Maps",
   "mapviewer.components.Footer.author.message": "Made with love by {author}.",
   "mapviewer.components.Header.map": "Map",
   "mapviewer.components.Header.home": "Home",
