--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -1,4 +1,13 @@
 {
+  "mapviewer.containers.MapPage.info": "Данные карты:",
+  "mapviewer.containers.MapPage.flags": "Отображать:",
+  "mapviewer.containers.MapPage.checkbox.streets": "улицы",
+  "mapviewer.containers.MapPage.checkbox.houses": "дома",
+  "mapviewer.containers.MapPage.checkbox.water": "водные объекты",
+  "mapviewer.containers.MapPage.up": "вверх",
+  "mapviewer.containers.MapPage.down": "вниз",
+  "mapviewer.containers.MapPage.left": "влево",
+  "mapviewer.containers.MapPage.right": "вправо",
   "mapviewer.containers.HomePage.ready.maps": "Показать готовые карты",
   "mapviewer.components.Footer.author.message": "Сделано с любовью командой {author}.",
   "mapviewer.components.Header.map": "Карта",
