--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -1,9 +1,18 @@
 {
-  "boilerplate.containers.HomePage.ready.maps": "Показать готовые карты",
-  "boilerplate.components.Footer.author.message": "Сделано с любовью командой {author}.",
-  "boilerplate.components.Header.map": "Карта",
-  "boilerplate.components.Header.home": "Домашняя страница",
-  "boilerplate.containers.LocaleToggle.ru": "Русский(ru)",
-  "boilerplate.containers.LocaleToggle.en": "Английский(eng)",
-  "boilerplate.containers.NotFoundPage.header": "Страница не найдена"
+  "mapviewer.containers.MapPage.info": "Данные карты:",
+  "mapviewer.containers.MapPage.flags": "Отображать:",
+  "mapviewer.containers.MapPage.checkbox.streets": "улицы",
+  "mapviewer.containers.MapPage.checkbox.houses": "дома",
+  "mapviewer.containers.MapPage.checkbox.water": "водные объекты",
+  "mapviewer.containers.MapPage.up": "вверх",
+  "mapviewer.containers.MapPage.down": "вниз",
+  "mapviewer.containers.MapPage.left": "влево",
+  "mapviewer.containers.MapPage.right": "вправо",
+  "mapviewer.containers.HomePage.ready.maps": "Показать готовые карты",
+  "mapviewer.components.Footer.author.message": "Сделано с любовью командой {author}.",
+  "mapviewer.components.Header.map": "Карта",
+  "mapviewer.components.Header.home": "Домашняя страница",
+  "mapviewer.containers.LocaleToggle.ru": "Русский(ru)",
+  "mapviewer.containers.LocaleToggle.en": "Английский(eng)",
+  "mapviewer.containers.NotFoundPage.header": "Страница не найдена"
 }
