--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,15 +1,24 @@
 {
+  "about": "О приложении",
+  "about.text": "MapViewer - лучшее приложение для работы с картами, представленными в XML-формате. Приложение поддерживается большинством браузеров ( Google Chrome, Microsoft Edge, Opera, и.т.д.) и мобильными устройствами. ",
   "author.message": "Сделано с любовью командой {author}.",
   "checkbox.houses": "дома",
   "checkbox.streets": "улицы",
   "checkbox.water": "водные объекты",
+  "choose.map": "Выберите карту  ",
+  "close": "Закрыть",
+  "copyright": "(c) Сделано командой MapViewer, Санкт-Петербург, Россия, 2019",
   "down": "вниз",
+  "feedback": "По любым возникшим вопросам обращайтесь на leins275@gmail.com",
   "flags": "Вывод:",
-  "home": "Домой",
   "info": "Данные карты:",
+  "lang": "Язык",
   "left": "влево",
   "license.message": "Лицензия MIT.",
-  "map": "Карта",
+  "map1": "Карта1",
+  "map2": "Карта2",
+  "map3": "Карта3",
   "right": "вправо",
-  "up": "вверх"
+  "up": "вверх",
+  "upload.map": "Загрузить карту"
 }
