Fix OutputData Design
* Refactor CheckboxBar to OutputData (it shows exactly general semantics)
* Change checkboxes and map info page location
* Add new help message on choosing data

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,6 +11,7 @@
   "down": "down",
   "feedback": "If you have any questions or problems, please, report them at leins275@gmail.com",
   "flags": "Output:",
+  "helpOnChoosing": "Choose the types of data you want to see.",
   "info": "Map data:",
   "lang": "Language",
   "left": "left",
