--- a/src/i18n/messages/messages.json
+++ b/src/i18n/messages/messages.json
@@ -108,5 +108,10 @@
     "id": "right",
     "defaultMessage": "right",
     "filepath": "src/messages.js"
+  },
+  {
+    "id": "helpOnChoosing",
+    "defaultMessage": "Choose the types of data you want to see.",
+    "filepath": "src/messages.js"
   }
 ]
