--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -11,6 +11,7 @@
   "down": "вниз",
   "feedback": "По любым возникшим вопросам обращайтесь на leins275@gmail.com",
   "flags": "Вывод:",
+  "helpOnChoosing": "Выберите типы данных, которые надо отобразить.",
   "info": "Данные карты:",
   "lang": "Язык",
   "left": "влево",
