--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -16,9 +16,10 @@
   "lang": "Язык",
   "left": "влево",
   "license.message": "Лицензия MIT.",
-  "map1": "Карта1",
-  "map2": "Карта2",
-  "map3": "Карта3",
+  "Alexandria": "Александрия",
+  "Cairo": "Каир",
+  "Davis": "Дэвис",
+  "SPB": "СПБ",
   "right": "вправо",
   "up": "вверх",
   "upload.map": "Загрузить карту"
