--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -22,5 +22,6 @@
   "SPB": "СПБ",
   "right": "вправо",
   "up": "вверх",
-  "upload.map": "Загрузить карту"
+  "upload.map": "Загрузить карту",
+  "loading": "Загрузка..."
 }
