Updated preload maps

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,8 +17,8 @@
   "left": "left",
   "license.message": "This project is licensed under the MIT license.",
   "Alexandria": "Alexandria",
-  "Cairo": "Cairo",
-  "Davis": "Davis",
+  "Baku": "Baku",
+  "Stockton": "Stockton",
   "SPB": "SPB",
   "right": "right",
   "up": "up",
