--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -17,8 +17,8 @@
   "left": "влево",
   "license.message": "Лицензия MIT.",
   "Alexandria": "Александрия",
-  "Cairo": "Каир",
-  "Davis": "Дэвис",
+  "Baku": "Баку",
+  "Stockton": "Стоктон",
   "SPB": "СПБ",
   "right": "вправо",
   "up": "вверх",
