--- a/src/i18n/messages/messages.json
+++ b/src/i18n/messages/messages.json
@@ -40,13 +40,13 @@
     "filepath": "src/messages.js"
   },
   {
-    "id": "Cairo",
-    "defaultMessage": "Cairo",
+    "id": "Baku",
+    "defaultMessage": "Baku",
     "filepath": "src/messages.js"
   },
   {
-    "id": "Davis",
-    "defaultMessage": "Davis",
+    "id": "Stockton",
+    "defaultMessage": "Stockton",
     "filepath": "src/messages.js"
   },
   {
