--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,7 +1,11 @@
 {
+  "Alexandria": "Александрия",
+  "Baku": "Баку",
+  "Stockton": "Стоктон",
   "about": "О приложении",
   "about.text": "MapViewer - лучшее приложение для работы с картами, представленными в XML-формате. Приложение поддерживается большинством браузеров ( Google Chrome, Microsoft Edge, Opera, и.т.д.) и мобильными устройствами. ",
   "author.message": "Сделано с любовью командой {author}.",
+  "batch": "порция данных из",
   "checkbox.houses": "дома",
   "checkbox.streets": "улицы",
   "checkbox.water": "водные объекты",
@@ -16,12 +20,10 @@
   "lang": "Язык",
   "left": "влево",
   "license.message": "Лицензия MIT.",
-  "Alexandria": "Александрия",
-  "Baku": "Баку",
-  "Stockton": "Стоктон",
-  "SPB": "СПБ",
+  "loading": "Загрузка...",
+  "parsing": "Обрабатывается",
+  "rendering": "Идет отрисовка карты, пожалуйста, подождите...",
   "right": "вправо",
   "up": "вверх",
-  "upload.map": "Загрузить карту",
-  "loading": "Загрузка..."
+  "upload.map": "Загрузить карту"
 }
